# arca

./: .gitmodules  README.md
cuda/: CMakeLists.txt  Readme.md  my_metrics.txt
cuda/prog/: main.cu
cuda/ptxjit/: main.cu  main.cudafe1.c  main.cudafe1.gpu  main.cudafe1.stub.c  main.ptx  test.cuh  test2.cu  test2.cudafe1.c  test2.cudafe1.gpu  test2.cudafe1.stub.c  test2.cuh  test2.ptx
cuda/sandbox/: main.cu
cuda/src/: CUContextContainer.cu  CUContextContainer.cuh  HelperCuda.h  NvrtcContainer.cu  NvrtcContainer.cuh  NvrtcContainer2.cu  NvrtcContainer2.cuh  PtxCompiler.cu  PtxCompiler.cuh  PtxLinker.cu  PtxLinker.cuh  StrLenContainer.cu  StrLenContainer.cuh  Test.cu  Test.cuh  device.cu  ffi.cuh  global.cu  global.cuh
cuda/src/examples/: device.cuh  ffi.cu  global.cu  test.cu  test.cuh
generator/: README.md  package.yaml
generator/app/: Main.hs
generator/descriptions/Arca/Cuda/World/GeneratedOps/: SinglePrecisionIntrinsics.cuda
generator/descriptions/Epigenisys/Language/GeneratedOps/: SinglePrecisionIntrinsics.cuda  SinglePrecisionMathematicalFunctions.cuda
generator/descriptions/Epigenisys/Worlds/CudaWorld/GeneratedOps/: IntegerIntrinsics.cuda  TypeCastingIntrinsics.cuda
haskell/: ChangeLog.md  Cuda.hs  README.md  cuda.txt  package.yaml
haskell/app/: Main.hs
haskell/app/ast/: Main.hs
haskell/app/ffi/: Main.hs
haskell/app/generator/: Main.hs
haskell/app/test/: Main.hs
haskell/arca/: ChangeLog.md  out.txt  stack.yaml
haskell/arca/arca-cuda/: ChangeLog.md  README.md  notes.txt  package.yaml
haskell/arca/arca-cuda/app/: Main.hs
haskell/arca/arca-cuda/app/code-gen/: Main.hs
haskell/arca/arca-cuda/app/ffi/: Main.hs
haskell/arca/arca-cuda/app/sandbox/: Main.hs
haskell/arca/arca-cuda/src/Arca/Cuda/: World.hs
haskell/arca/arca-cuda/src/Arca/Cuda/FFI/: CUContextContainer.hs  CudaEnums.hs  PtxCompiler.hs  PtxLinker.hs  Util.hs
haskell/arca/arca-cuda/src/Arca/Cuda/World/: Internal.hs  Ops.hs  SpecialOps.hs  VectorOps.hs  WarpFunctions.hs
haskell/arca/arca-cuda/src/Arca/Cuda/World/GeneratedOps/: IntegerIntrinsics.hs  SinglePrecisionIntrinsics.hs  SinglePrecisionMathematicalFunctions.hs  TypeCastingIntrinsics.hs
haskell/arca/arca-cuda/src/Arca/Cuda/World/Internal/: AST.hs  Accessor.hs  Operator.hs  Types.hs  VectorTypes.hs
haskell/arca/arca-lang/: ChangeLog.md  README.md  package.yaml
haskell/arca/arca-lang/app/simple-world/: Main.hs
haskell/arca/arca-lang/src/Arca/: Language.hs  Ops.hs
haskell/arca/arca-lang/src/Arca/Language/: Internal.hs  Mutate.hs  Ops.hs  Parser.hs  Stack.hs  Tree.hs
haskell/arca/arca-lang/src/Arca/Worlds/: SimpleWorld.hs
haskell/src/Epigenisys/: Language.hs  Ops.hs  Stack.hs  SymbolWorld.hs  Types.hs  World.hs
haskell/src/Epigenisys/Cuda/: Program.hs
haskell/src/Epigenisys/FFI/: CUContextContainer.hs  CudaEnums.hs  NvrtcContainer.hs  PtxCompiler.hs  PtxLinker.hs  Test.hs  Util.hs
haskell/src/Epigenisys/Language/: Internal.hs  Mutate.hs  Ops.hs  Parser.hs  Stack.hs  Tree.hs  Types.hs
haskell/src/Epigenisys/Language/GeneratedOps/: IntegerIntrinsics.hs  SinglePrecisionIntrinsics.hs  SinglePrecisionMathematicalFunctions.hs  TypeCastingIntrinsics.hs
haskell/src/Epigenisys/Sandbox/: Sandbox.hs
haskell/src/Epigenisys/Worlds/: CudaWorld.hs  SimpleWorld.hs  SymbolWorld.hs
haskell/src/Epigenisys/Worlds/CudaWorld/: Internal.hs  Ops.hs
haskell/src/Epigenisys/Worlds/CudaWorld/GeneratedOps/: IntegerIntrinsics.hs  SinglePrecisionIntrinsics.hs  SinglePrecisionMathematicalFunctions.hs  TypeCastingIntrinsics.hs
haskell/src/Epigenisys/Worlds/CudaWorld/Internal/: AST.hs  CudaWorld.hs  Types.hs
sandbox/: something_tf.c
sandbox/async-copy/: Makefile  Readme.md  main.cu  test.cpp
sandbox/coalesced-access/: .gitignore  Makefile  Readme.md  forum.cu  hardcoded.txt  main.cu  nothardcoded.txt
sandbox/embed-ad/: Main.hs  package.yaml
sandbox/embed-ad-full/: README.md  package.yaml
sandbox/embed-ad-full/app/: Main.hs
sandbox/embed-ad-full/src/: Lib.hs
sandbox/embed-ad-full2/: ChangeLog.md
sandbox/full-autograd/: Main.hs  Readme.md  out.txt
sandbox/gadt-eq/: package.yaml
sandbox/gadt-eq/app/: Main.hs
sandbox/genetic/: Readme.md  main.cu
sandbox/genetic-gui/: CMakeLists.txt  something.cuh
sandbox/imgui-implot/: CMakeLists.txt  Readme.md  main.cpp
sandbox/prof-curand/: Readme.md  dog.cu  main.cu
sandbox/shfl-test/: Makefile  Readme.md  main.cu
sandbox/stream-limit/: main.cu
sandbox/threaded-implot-update/: Readme.md  main.cpp  something.cu  transposer.cpp  transposer.hpp
sandbox/var-args/: Readme.md  package.yaml
sandbox/var-args/app/: Main.hs
